Replace `String#isBlank` call
The method was added in Java 11